# cube-tracker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: .gitkeep  cube.yaml  render.yaml
scripts/: .gitkeep
src/cube_tracker/: __init__.py
src/cube_tracker/common/: __init__.py  config.py
src/cube_tracker/eval/: __init__.py  reproject_overlay.py  review_labels.py  video_to_frames.py  webcam_capture.py  webcam_demo.py
src/cube_tracker/geometry/: __init__.py
src/cube_tracker/infer/: __init__.py
src/cube_tracker/models/: __init__.py  augment.py  detector.py  detector_data.py  finetune_detector.py  pseudo_label.py
src/cube_tracker/reconstruct/: __init__.py
src/cube_tracker/render/: __init__.py  build_cube.py  cube_geometry.py  cube_state.py  dataset_launcher.py  dataset_plan.py  fetch_hdris.py  generate_dataset.py  monitor_dataset.py  render_core.py
src/cube_tracker/state/: __init__.py
tests/: test_config.py  test_cube_geometry.py  test_cube_state.py  test_dataset_plan.py  test_detector_data.py  test_monitor.py  test_overlay.py  test_smoke.py
